# InterGNN

./: run_all_experiments.py
Inter_gnn/: No Docker containerization - Need D.txt  README.md  University of Mumbai.txt  Untitled.txt  __init__.py  cli.py  pyproject.toml
Inter_gnn/data/: __init__.py  cliffs.py  concepts.py  datamodule.py  datasets.py  featurize.py  protein.py  splits.py  standardize.py
Inter_gnn/evaluation/: __init__.py  causal.py  chemical_validity.py  faithfulness.py  predictive.py  stability_metrics.py  statistical.py
Inter_gnn/explainers/: __init__.py  cf_explainer.py  cider.py  t_explainer.py
Inter_gnn/inter_gnn.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
Inter_gnn/interpretability/: __init__.py  concept_whitening.py  motifs.py  prototypes.py  stability.py
Inter_gnn/models/: __init__.py  attention.py  core_model.py  encoders.py  task_heads.py
Inter_gnn/training/: __init__.py  callbacks.py  config.py  losses.py  trainer.py
Inter_gnn/visualization/: __init__.py  concept_viz.py  counterfactual_viz.py  dashboard.py  molecule_viz.py  motif_viz.py  prototype_viz.py
