[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "inter-gnn"
version = "1.0.0"
description = "Interpretable GNN-Based Framework for Drug Discovery and Candidate Screening"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Harshal Loya"},
    {name = "Jash Chauhan"},
    {name = "Het Gala"},
]
keywords = [
    "graph-neural-networks",
    "drug-discovery",
    "explainable-ai",
    "molecular-property-prediction",
    "interpretability",
    "activity-cliffs",
    "concept-whitening",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Chemistry",
]
dependencies = [
    "torch>=2.0.0",
    "torch-geometric>=2.4.0",
    "rdkit>=2023.3.1",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.2.0",
    "matplotlib>=3.7.0",
    "pyyaml>=6.0",
    "tqdm>=4.65.0",
]

[project.optional-dependencies]
viz = [
    "plotly>=5.14.0",
    "py3Dmol>=2.0.0",
    "seaborn>=0.12.0",
    "ipywidgets>=8.0.0",
]
dev = [
    "pytest>=7.3.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.4.0",
]

[project.scripts]
inter-gnn = "inter_gnn.cli:main"

[project.urls]
Homepage = "https://github.com/inter-gnn/inter-gnn"
Documentation = "https://inter-gnn.readthedocs.io"
Repository = "https://github.com/inter-gnn/inter-gnn"

[tool.setuptools.packages.find]
where = ["."]
include = ["inter_gnn*"]

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
